@@ -31,7 +31,7 @@ public class PermutationOfStringExtraSpace {
                 result += strArray[i];
                 track[i] = true;
                 permutationOfString(resultList,strArray,track,dubba,result);
-                dubba.remove(dubba.size()-1);
+                dubba.removeLast();
                 result = result.substring(0,result.length() -1);
                 track[i] = false;
             }
